tests/access-policy/00-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy
spec:
  image: image
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - namespace: other
          application: other
    outbound:
      rules:
        - namespace: other
          application: other
      external:
        - host: example.com
          ports:
            - name: http
              port: 80
              protocol: HTTP
        - host: foo.com
