tests/access-policy/00-other.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: other
---
apiVersion: v1
kind: Service
metadata:
  namespace: other
  name: other
spec:
  selector:
    app: other
  ports:
  - port: 8080
