tests/access-policy/03-delete-application.yaml
# apiVersion: kuttl.dev/v1beta1
# kind: TestStep
# delete:
#   - apiVersion: skiperator.kartverket.no/v1alpha1
#     kind: Application
#     name: access-policy
#   - apiVersion: skiperator.kartverket.no/v1alpha1
#     kind: Application
#     name: access-policy-2

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete applications.skiperator.kartverket.no access-policy access-policy-2
    namespaced: true
