tests/access-policy/01-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-5fc7ec0c724dc01
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - bar.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-7a60bf03299a2759
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - baz.com
  ports:
    - name: http
      number: 80
      protocol: HTTP
