tests/access-policy/01-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-56cd7aa901014e78
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-3a90cb5d70dc06a
