tests/access-policy/02-errors.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: test
          podSelector:
            matchLabels:
              app: access-policy
      ports:
        - port: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-56cd7aa901014e78
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-3a90cb5d70dc06a
