tests/access-policy/04-errors.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-5fc7ec0c724dc01
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: access-policy-egress-7a60bf03299a2759
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy
